@@ -4,7 +4,7 @@
 	"http://dphp.googlecode.com/svn/trunk/docs/package.dtd">
 <package>
 	<name>Ddth::Commons::Logging</name>
-	<version>0.1</version>
+	<version>0.1.1</version>
 	<description>
 		A Logging interface that is an independent abstraction of other
 		logging libraries.
