@@ -1,3 +1,7 @@
+* 12-Mar-2008: version 0.1_5
+	- Upgraded Ddth_Commons_Logging to 0.1.1:
+		+ Class(es): ConsoleLog
+
 * 28-Feb-2008: version 0.1_4
 	- Introduced package MessageFormat module:
 		+ Class(es): MessageFormat
